Fixed all table rows text overflow.

--- a/static/manage/css/messages.css
+++ b/static/manage/css/messages.css
@@ -6,14 +6,13 @@
 	width:120px;
 }
 
-#header-subject, .subject, #header-feedback-subject, .feedback-subject {
-	width:250px;
+#header-feedback-subject, .feedback-subject {
+	width:320px; 
+}
+#header-subject, .subject {
+	width:470px; 
 }
 
-#header-status, .status, #header-feedback-status, .feedback-status {
-	width:80px;
-}
-
-#header-from, .from, #header-feedback-from, .feedback-from {
-	width:160px;
+#header-feedback-from, .feedback-from {
+	width:160px; 
 }
